Upload of revised book 17W8

--- a/Share/1010490075.html
+++ b/Share/1010490075.html
@@ -18,7 +18,7 @@ ShowVEpubDownload('2023/2/23 2023/1/18');
 BookSectionEnd();
 ?>
 <img src="covers/1010490075.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝Sherlock整理製作及提供掃瞄檔。感謝Gilbert勘誤<br>
+好讀書櫃【典藏版】，感謝Sherlock整理製作及提供掃瞄檔。感謝Gilbert勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -31,7 +31,7 @@ BookSectionEnd();
 本書記述了兩宋交接年代的諸多故事，以講史兼評論的方式，帶讀者一邊觀看歷史的滄桑，一邊領會政治詭譎的角力，與人性多變的複雜。同時，本書彙編了大量相關人物的簡介及歷史典故的來龍去脈，讓讀者在精彩的主文之外，還能另外掌握豐富的延伸知識。<br>
 <br>
 <br>
-作者簡介：
+作者簡介：<br>
 <br>
 袁騰飛<br>
 <br>
