--- a/book/17W8.html
+++ b/book/17W8.html
@@ -12,16 +12,16 @@ $title = '神秘化身';
 $book = 'E17W8';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/11/3 (721K)');
+ShowUpdbDownload('2023/2/23 (721K) 2017/11/3');
 ShowPrcDownload('2017/11/3 (767K)');
 ShowMobiDownload('2017/11/3 (2094K)');
-ShowEpubDownload('2017/11/3 (498K)');
-ShowVEpubDownload('2017/11/3 (498K)');
+ShowEpubDownload('2023/2/23 (498K) 2017/11/3');
+ShowVEpubDownload('2023/2/23 (498K) 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17W8.jpg" HSPACE=8 vspace=2 align=right>
 <img src="covers/17W8a.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝Angela Huang按掃描檔整理製作。譯者穆卓芸。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝Angela Huang按掃描檔整理製作。譯者穆卓芸。感謝Elva Lin/IT勘誤。<br>
 <br>
 <b>都柏林謀殺小組之二</b><br>
 <br>
@@ -42,7 +42,32 @@ BookSectionEnd();
 以《神秘森林》令國際文壇為之驚豔的才女作家塔娜．法蘭琪，再次以其如詩般優美的文字，完成了這部心理驚悚的傑作！主角擺盪在「凱西」與「蕾西」、現在與過去、真實與虛構的兩個身分之間，彷彿兩部交替出現的主旋律，彼此又纏繞糾結成一首扣人心弦的賦格曲。全書懸疑的佈局、幽深的氣氛，對照隱晦的真相、駭人的秘密，以及不斷升高的猜忌和背叛，也再次讓我們看得欲罷不能、讚嘆不已！<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(Elva Lin/IT 2023/02/23)<br>
+碎，斧鏊深深/碎，斧鑿深深<br>
+遺棄神紙必須/遺棄神祇必須<br>
+。﹁眠袋太美/。﹁眼袋太美<br>
+間。我將大門關/間。我將大門關上。<br>
+小瑞已鞋將煙/小瑞已經將煙<br>
+清楚，雙藍眼晶瑩/清楚，一雙藍眼晶瑩<br>
+圮的馬廢隱身/圮的馬廄隱身<br>
+枝，猛力一渾將藤/枝，猛力一揮將藤<br>
+尼爾篤他胡思亂想，要/尼爾駡他胡思亂想，要<br>
+手槍上瞠射擊瞬間/手槍上膛射擊瞬間<br>
+而是彳亍學步的嬰/而是行走學步的嬰<br>
+襪，腳踩纖弱瘦削有如/襪，腳踝纖弱瘦削有如<br>
+容易看出究/容易看出究竟。<br>
+畔：那間屋予裡一/畔：那間屋子裡一<br>
+能？他，天早上醒來/能？他那天早上醒來<br>
+多少，直在想女孩/多少，一直在想女孩<br>
+水，又有柑橘的味/水，又有柑橘的味道。<br>
+蕾西一趙來回不可/蕾西一趟來回不可<br>
+應付一拘票麻煩/應付一海票麻煩<br>
+波，我忽然發覺己其實/波，我忽然發覺自己其實<br>
+彎身逐，拾起石板/彎身逐一拾起石板<br>
+覺會好，點。﹂/覺會好一點。﹂<br>
+尼爾喋嗓不休，大/尼爾喋喋不休，大<br>
+<br>
 (mPDB 2017/11/3)<br>
 汨汨/汩汩<br>
 不堪涉想/不堪設想<br>
