Upload of revised book 1603

--- a/book/1603.html
+++ b/book/1603.html
@@ -12,15 +12,15 @@ $author = '三毛';
 $title = '萬水千山走遍'; 
 $book = 'F1603';
 ShowBookTitle();
-ShowUpdbDownload('2016/2/5 (169K)');
+ShowUpdbDownload('2023/2/23 (169K) 2016/2/5');
 ShowPrcDownload('2016/2/5 (175K)');
 ShowMobiDownload('2016/2/5 (509K)');
-ShowEpubDownload('2016/2/5 (124K)');
-ShowVEpubDownload('2016/2/5 (124K)');
+ShowEpubDownload('2023/2/23 (124K) 2016/2/5');
+ShowVEpubDownload('2023/2/23 (124K) 2016/2/5');
 BookSectionEnd();
 ?>
 <img src="covers/1603.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝guinness參照原書整理校正過。<br>
+好讀書櫃【典藏版】，感謝guinness參照原書整理校正過。感謝regina/IT勘誤。<br>
 <br>
 民國７０年１１月，由聯合報特別贊助三毛前往中南美洲旅行半年，回來之後便寫成了這一本《萬水千山走遍》，並作環島演講。<br>
 <br>
@@ -31,7 +31,19 @@ BookSectionEnd();
 另一作品<a href="?M=Share&P=0848">【高原的百合花】</a>則是本書的續集。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(regina/IT 2023/02/23)<br>
+公元一五○三年/公元一五0三年<br>
+直到一九三o年/直到一九三0年<br>
+專注的呼喚裡復活再/專注的呼吸裡復活著<br>
+唐。＼切斷＼吉珂德和他的跟隨者/唐。吉珂德和他的跟隨者<br>
+那是一八九o年/那是一八九0年<br>
+？﹂她指指米自。/？﹂她指指米夏。<br>
+我，說肓妮早班飛機走了。/我，說安妮早班飛機走了。<br>
+的，其實性情私我們，不/的，其實性情如我們，不<br>
+！﹂你們說。/！﹂他們說。<br>
+鐘方才到達吉斯各。/鐘方才到達古斯各。<br>
+<br>
 (mPDB 2016/2/5)<br>
 意大利/義大利<br>
 不開的的一個/不開的一個<br>
