Corrected typos based on reader feedback

--- a/Share/1010490085.html
+++ b/Share/1010490085.html
@@ -22,22 +22,22 @@ BookSectionEnd();
 <br>
 <strong>本書簡介：</strong><br>
 <br>
-《浮世畸零人》是《第五個孩子》的續篇。駱維特家的第五個孩子——班長大了。外貌奇特、天生蠻力的班遭家人排斥，被迫離家出走。天性暴力下掩藏着的質朴心智，令他數次遭人利用：被毒販騙去偷運毒品，被科研中心抓去做研究……班懷抱尋找同類的純真希望，卻不斷失望。本作是諾獎得主多麗絲·萊辛創作晚期對愛與道德觀的重新思考，閱盡人生的萊辛以巧妙的筆觸點出了人性的自私與殘酷。<br>
+《浮世畸零人》是《第五個孩子》的續篇。駱維特家的第五個孩子——班長大了。外貌奇特、天生蠻力的班遭家人排斥，被逼離家出走。天性暴力下掩藏着的質樸心智，令他數次遭人利用：被毒販騙去偷運毒品，被科研中心抓去做研究……班懷抱尋找同類的純真希望，卻不斷失望。本作是諾獎得主多麗絲·萊辛創作晚期對愛與道德觀的重新思考，閱盡人生的萊辛以巧妙的筆觸點出了人性的自私與殘酷。<br>
 <br>
 <br>
 <strong>作者簡介：</strong><br>
 <br>
 多麗絲．萊辛（Doris Lessing）<br>
 <br>
-英國當代著名作家，2007年諾貝爾文學獎得主，被譽為繼伍爾芙之后最偉大的女性作家。<br>
+英國當代著名作家，2007年諾貝爾文學獎得主，被譽為繼伍爾芙之後最偉大的女性作家。<br>
 <br>
-1919年出生於伊朗。幼年時在南非農場度過，家境貧困，十四歲因眼疾輟學，十五歲離家做保姆，后從事過接線員、速記員等工作。<br>
+1919年出生於伊朗。幼年時在南非農場度過，家境貧困，十四歲因眼疾輟學，十五歲離家做保姆，後從事過接線員、速記員等工作。<br>
 <br>
 曾兩次結婚又離異。1949年離開南非，留下丈夫和兩個孩子，攜幼子移居英國追尋心目中的自由生活，全部家當是皮包中的一部小說草稿。該書不久以《野草在歌唱》為題出版，萊辛從此一舉成名。<br>
 <br>
-1962年，代表作《金色筆記》問世，成為其摘得諾貝爾獎桂冠的充分理由。此后，筆耕不輟，一生出版了五十余部作品。<br>
+1962年，代表作《金色筆記》問世，成為其摘得諾貝爾獎桂冠的充分理由。此後，筆耕不輟，一生出版了五十餘部作品。<br>
 <br>
-諾貝爾文學獎評委會曾如此評價：「朵麗絲·萊辛既是文學史中的典范，也是當下文學創作的先鋒。她改變了我們審視這個世界的方式。」<br>
+諾貝爾文學獎評委會曾如此評價：「朵麗絲·萊辛既是文學史中的典範，也是當下文學創作的先鋒。她改變了我們審視這個世界的方式。」<br>
 <br>
 <br>
 譯者簡介：<br>
