--- a/book/1603.html
+++ b/book/1603.html
@@ -33,11 +33,11 @@ BookSectionEnd();
 <font size=2>
 <strong>勘誤表</strong>：<br>
 (regina/IT 2023/02/23)<br>
-公元一五○三年/公元一五0三年<br>
-直到一九三o年/直到一九三0年<br>
+公元一五○三年/公元一五0三年（依原書的用字）<br>
+直到一九三o年/直到一九三0年（依原書的用字）<br>
 專注的呼喚裡復活再/專注的呼吸裡復活著<br>
-唐。＼切斷＼吉珂德和他的跟隨者/唐。吉珂德和他的跟隨者<br>
-那是一八九o年/那是一八九0年<br>
+唐。吉珂德/唐．吉珂德<br>
+那是一八九o年/那是一八九0年（依原書的用字）<br>
 ？﹂她指指米自。/？﹂她指指米夏。<br>
 我，說肓妮早班飛機走了。/我，說安妮早班飛機走了。<br>
 的，其實性情私我們，不/的，其實性情如我們，不<br>
