--- a/Share/1010490012.html
+++ b/Share/1010490012.html
@@ -12,13 +12,13 @@ $title = '醉枕江山卷七：小兵楊帆';
 $book = 'P1010490012';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2022/11/23');
-ShowEpubDownload('2022/11/23');
-ShowVEpubDownload('2022/11/23');
+ShowUpdbDownload('2023/2/28 2022/11/23');
+ShowEpubDownload('2023/2/28 2022/11/23');
+ShowVEpubDownload('2023/2/28 2022/11/23');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝顏國強整理製作。<br>
+好讀書櫃《經典版》，感謝顏國強整理製作。感謝JC/IT勘誤30處。<br>
 <br>
 <b>本書簡介：</b><br>
 <br>
@@ -75,6 +75,37 @@ BookSectionEnd();
 2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(JC/IT 2023/02/28)
+馬橋娘著。就/馬橋娘說著。就<br>
+金吾衛，分左右/（分段）金吾衛，分左右<br>
+妮兒樹覺可不/妮兒睡覺可不<br>
+不是好事關夫子年事/不是好事。關夫子年事<br>
+一口大氣上官婉兒/一口大氣。上官婉兒<br>
+那種奇感覺就像/那種奇異感覺就像<br>
+過他勾三描四，尤/過他勾三搭四，尤<br>
+火地去拍打/火地去拍打。<br>
+，想早些歇歇﹂/，想早些歇歇。﹂<br>
+見怪不怪了。/見怪不怪了。（分段）<br>
+厚厚的、的落葉/厚厚的落葉<br>
+山坳裡/（分段）山坳裡<br>
+烘烘的感覺。/烘烘的感覺。（分段）<br>
+舞於花間：小鳥啁啾/舞於花間，小鳥啁啾<br>
+一桌珍槎美味。﹂/一桌珍饈美味。﹂<br>
+武則天入駐龍門/（分段）武則天入駐龍門<br>
+開，然後：：﹂就像/開，然後：：就像<br>
+這個：：﹂上官待詔/這個：：上官待詔<br>
+　﹁希幸聿！﹂/　﹁希聿聿！﹂<br>
+盛大的游宴/（分段）盛大的游宴<br>
+月亮悄悄/（分段）月亮悄悄<br>
+了，兩個女兒也一併領/了，兩個兒子也一併領<br>
+嫁！﹁﹂/嫁！﹂<br>
+沿著伊水/（分段）沿著伊水<br>
+楊帆有了/（分段）楊帆有了<br>
+受人擺佈！﹂﹂/受人擺佈！﹂<br>
+一喜，一悲！/一喜，一悲！（分段）<br>
+岸，纖夫拉著/岸，縴夫拉著<br>
+邊的侍詔。婉/邊的待詔。婉<br>
+的，象喝了蜜一/的，像喝了蜜一<br>
 </font>
 </td></tr></table>
