--- a/Share/1010490013.html
+++ b/Share/1010490013.html
@@ -12,13 +12,13 @@ $title = '醉枕江山卷八：百騎風雲';
 $book = 'P1010490013';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2022/11/23');
-ShowEpubDownload('2022/11/23');
-ShowVEpubDownload('2022/11/23');
+ShowUpdbDownload('2023/2/28 2022/11/23');
+ShowEpubDownload('2023/2/28 2022/11/23');
+ShowVEpubDownload('2023/2/28 2022/11/23');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝顏國強整理製作。<br>
+好讀書櫃《經典版》，感謝顏國強整理製作。感謝JC/IT勘誤23處。<br>
 <br>
 <b>本書簡介：</b><br>
 <br>
@@ -74,6 +74,30 @@ BookSectionEnd();
 2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(JC/IT 2023/02/28)<br>
+一副也就走了！﹂/一副也就是了！﹂<br>
+此時一輛/（分段）此時一輛<br>
+（百度隨夢，最快更新）/（刪除）<br>
+件事安排好，。/件事安排好。<br>
+呢？我﹂我現在/呢？我︙我現在<br>
+太平公主府，/（分段）太平公主府，<br>
+位大管串，是/位大管事，是<br>
+﹁哈哈哈哈/（分段）﹁哈哈哈哈<br>
+長嘆：：/長嘆：：（分段）<br>
+才行：：/才行：：（分段）<br>
+閃過一抹栗人的寒/閃過一抹厲人的寒<br>
+﹁若是狄公還不/若是狄公還不<br>
+楊帆離開/（分段）楊帆離開<br>
+雞皮鶴發、老/雞皮鶴髮、老<br>
+天宮寺前/（分段）天宮寺前<br>
+：﹁我來了我來了！﹂/：﹁我來了，我來了！﹂<br>
+﹁父親：：﹂/（分段）﹁父親：：﹂<br>
+九百人請願/（分段）九百人請願<br>
+壽到楊帆/等到楊帆<br>
+繽相高聲/擯相高聲<br>
+飲下一杯酒。﹂︙/飲下一杯酒︙<br>
+興米淤/（分段）興米淤<br>
+意義載然不同。/意義截然不同。<br>
 </font>
 </td></tr></table>
