--- a/Share/1010490010.html
+++ b/Share/1010490010.html
@@ -18,7 +18,7 @@ ShowVEpubDownload('2023/2/11 2022/11/23');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝顏國強整理製作。感謝JC/IT勘誤10處。<br>
+好讀書櫃《經典版》，感謝顏國強整理製作。感謝JC/IT勘誤13處。<br>
 <br>
 <b>本書簡介：</b><br>
 女帝武曌日月凌空，上官婉兒稱量天下，<br>
@@ -65,7 +65,9 @@ BookSectionEnd();
 <br>
 (JC/IT 2023/02/11)<br>
 馬母臉色稍雯薺，又/馬母臉色稍霽，又<br>
+﹁你要幹嘛？﹂/﹁你要幹嘛？﹂（分段）<br>
 那顆锃亮的光/那顆鋥亮的光<br>
+新人進來才成！﹂/新人進來才成！﹂（分段）<br>
  這賀林敏之生得/ 這賀蘭敏之生得<br>
 連忙稽手致謝/連忙稽首致謝<br>
 寺眾較量一楊呢。/寺眾較量一場呢。<br>
@@ -74,5 +76,6 @@ BookSectionEnd();
 己的身冇份之後/己的身份之後<br>
 快地暖了一眼盤膝/快地瞟了一眼盤膝<br>
 直到上元燈會！/直到上元燈會！﹂<br>
+上元燈會！﹂/上元燈會！﹂（分段）<br>
 </font>
 </td></tr></table>
