--- a/Share/1010490087.html
+++ b/Share/1010490087.html
@@ -27,7 +27,7 @@ BookSectionEnd();
 <br>
 <strong>作者簡介：</strong><br>
 <br>
-因惹．卡爾特斯<br>
+因惹．卡爾特斯（Imre Kertész）<br>
 <br>
 一九二九生於匈牙利布達佩斯一個猶太家庭。十五歲時（一九四四年），被送往奧許維茲集中營，一九五三年起長住布達佩斯，為自由作家，從事小說、散文與戲劇寫作。一九七五年的《非關命運》是其第一部小說。此外，其他作品如《英倫旗幟》、《奴役日記》、《大屠殺文化》、《行刑者裝子彈時的片刻沉默》和《流放的語言》等，並曾多次獲獎。二零零二年更獲得諾貝爾文學獎。<br>
 <br>
