--- a/book/audioAB002.html
+++ b/book/audioAB002.html
@@ -18,6 +18,9 @@ PlayMP3('AB002-08', '第二篇《一把青（二）》劉小珍錄音 2023/2/21'
 PlayMP3('AB002-09', '第二篇《一把青（三）》劉小珍錄音 2023/2/21');
 PlayMP3('AB002-10', '第二篇《一把青（四）》劉小珍錄音 2023/2/21');
 PlayMP3('AB002-11', '第二篇《一把青（五）》劉小珍錄音 2023/2/21');
+PlayMP3('AB002-12', '第三篇《歲除（一）》劉小珍錄音 2023/3/2');
+PlayMP3('AB002-13', '第三篇《歲除（二）》劉小珍錄音 2023/3/2');
+PlayMP3('AB002-14', '第三篇《歲除（三）》劉小珍錄音 2023/3/2');
 
 ?>
 
