Upload of revised books 17V0, 17V1, 17Q9, and 17S2

--- a/book/17Q9.html
+++ b/book/17Q9.html
@@ -12,15 +12,15 @@ $title = '至死方休';
 $book = 'E17Q9';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/10/6 (546K) 2017/12/1');
-ShowPrcDownload('2017/10/6 (548K) 2017/12/1');
-ShowMobiDownload('2017/10/6 (1544K) 2017/12/1');
-ShowEpubDownload('2017/10/6 (383K) 2017/12/1');
-ShowVEpubDownload('2017/10/6 (383K) 2017/12/1');
+ShowUpdbDownload('2023/3/4 (546K) 2017/12/1 2017/10/6');
+ShowPrcDownload('2017/12/1 (548K) 2017/10/6');
+ShowMobiDownload('2017/12/1 (1544K) 2017/10/6');
+ShowEpubDownload('2023/3/4 (383K) 2017/12/1 2017/10/6');
+ShowVEpubDownload('2023/3/4 (383K) 2017/12/1 2017/10/6');
 BookSectionEnd();
 ?>
 <img src="covers/17Q9.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者連育德。感謝Bee勘誤9處。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者連育德。感謝Bee勘誤9處。感謝Gilbert勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之二</b><br>
 <br>
@@ -39,7 +39,32 @@ BookSectionEnd();
 連育德，畢業於英國巴斯大學口筆譯所，曾任東吳大學英文系口筆譯講師，目前任職於國內知名證券公司，擔任中英文雙向翻譯與口譯。工作暇餘，譯作亦散見財經與時尚雜誌刊物。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(Gilbert 2023/3/4)<br>
+聚碳酸醋/聚碳酸酯<br>
+Memphis slim/Memphis Slim<br>
+威斯持/威斯特（共十五處）<br>
+威斯待/威斯特（共八處）<br>
+戴斯持/戴斯特<br>
+戴斯待/戴斯特<br>
+隔攔/隔欄<br>
+MOSCHＩNO/MOSCHINO<br>
+可以像個文明人吧﹂/可以個文明人吧？﹂<br>
+按紐/按鈕（共八處）<br>
+又往左側，晃/又往左側一晃<br>
+貝魯待/貝魯特<br>
+﹁他們都是些什麼人﹂/﹁他們都是些什麼人？﹂<br>
+再樞接縫處/再摳接縫處<br>
+幅勒/福勒<br>
+這麼惡劣的地方嗎﹂/這麼惡劣的地方嗎？﹂<br>
+誤殺Weavers妻子與兒子/誤殺Weaver的妻子與兒子<br>
+等到星期一再說。﹂1/等到星期一再說。﹂<br>
+出現一些狀況﹂。她說。/出現一些狀況。﹂她說。<br>
+生鏞/生鏽<br>
+﹁在喬治亞州，亞特蘭大。﹂蓋伯說/﹁在喬治亞州，亞特蘭大。﹂蓋伯說。<br>
+又被推往左邊．，/又被推往左邊，<br>
+CN N/CNN<br>
+<br>
 (Bee 2017/12/1)<br>
 犬概/大概<br>
 麥葛斯。﹁由你作主。﹂/麥葛斯說。﹁由你作主。﹂ <font color=#0066CC>(原書有誤)</font><br>
