--- a/book/17S2.html
+++ b/book/17S2.html
@@ -12,15 +12,15 @@ $title = '一觸即發';
 $book = 'E17S2';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/11/3 (560K)');
+ShowUpdbDownload('2023/3/4 (560K) 2017/11/3');
 ShowPrcDownload('2017/11/3 (560K)');
 ShowMobiDownload('2017/11/3 (1533K)');
-ShowEpubDownload('2017/11/3 (360K)');
-ShowVEpubDownload('2017/11/3 (361K)');
+ShowEpubDownload('2023/3/4 (360K) 2017/11/3');
+ShowVEpubDownload('2023/3/4 (361K) 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17S2.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者彭臨桂。感謝快雪勘誤1處。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者彭臨桂。感謝快雪勘誤1處。感謝Gilbert勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之三</b><br>
 <br>
@@ -35,7 +35,27 @@ BookSectionEnd();
 然而，就在蓋伯將軍的葬禮結束之後，竟然有人開槍要射殺裘蒂！李奇赫然發現對方就是殺了柯斯特洛的兇手，兩人這才驚覺，原來想要查出「雅各太太」身分的，不只李奇一個人；而蓋伯將軍生前急著要找到李奇，也絕不只是交待遺產那麼簡單……<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(Gilbert 2023/03/04)<br>
+柯斯持洛/柯斯特洛（共二處）<br>
+普待南郡/普特南郡<br>
+停了部龐蒂克火鳥．*些小孩的腳踏車隨意平放/停了部龐蒂克火鳥；一些小孩的腳踏車隨意平放<br>
+屋內的電線及電，話線/屋內的電線及電話線<br>
+停在一_車棚下的**佛蘭Chevy耩車後方/停在一輛車棚下的舊雪佛蘭Chevy轎車後方<br>
+樓成坑坑建澤的暗褐色/褪成坑坑窪窪的暗褐色<br>
+維持不是記者/維特不是記者<br>
+布陰克斯河/布隆克斯河<br>
+桎女/姪女<br>
+史泰爾G B/史泰爾GB<br>
+一輛雪佛蘭suburban?/一輛雪佛蘭suburban？<br>
+灰拘巴士/灰狗巴士<br>
+根普通/很普通<br>
+燒I傷/燒傷<br>
+狄威小/狄威特<br>
+出自狄威特的特的派件員/出自狄威特的派件員<br>
+瑞雪兒/雪瑞兒<br>
+﹁什麼事？﹂他問/﹁什麼事？﹂他問。<br>
+<br>
 (快雪 2017/11/3)<br>
 用他的狗子/用他的鉤子<br>
 <br>
