--- a/book/17V0.html
+++ b/book/17V0.html
@@ -12,15 +12,15 @@ $title = '死神的印鈔機';
 $book = 'E17V0';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/11/3 (400K)');
+ShowUpdbDownload('2023/3/4 (400K) 2017/11/3');
 ShowPrcDownload('2017/11/3 (396K)');
 ShowMobiDownload('2017/11/3 (1129K)');
-ShowEpubDownload('2017/11/3 (281K)');
-ShowVEpubDownload('2017/11/3 (281K)');
+ShowEpubDownload('2023/3/4 (281K) 2017/11/3');
+ShowVEpubDownload('2023/3/4 (281K) 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17V0.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝Angela Huang提供掃描檔。感謝ansa按掃描檔整理製作。譯者章欣。<br>
+好讀書櫃《典藏版》，感謝Angela Huang提供掃描檔。感謝ansa按掃描檔整理製作。譯者章欣。感謝Gilbert勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之一</b><br>
 <br>
@@ -39,7 +39,41 @@ BookSectionEnd();
 李查德成功賦予了傑克．李奇集帥氣外型、智慧神探、正義使者與動作英雄於一身的迷人特質，讓女人愛他，男人服他，敵人敬他！貫穿全書的快節奏和精采的動作場面，就像一顆隨時都會引爆的炸彈，吸引讀者必須全神貫注地屏息閱讀！<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(Gilbert 2023/3/4)<br>
+像伙/傢伙<br>
+澴有一個/還有一個<br>
+德懷特，史蒂文森/德懷特．史蒂文森<br>
+魁捂/魁梧（共三處）<br>
+開搶殺死/開槍殺死<br>
+一拐一瘛/一拐一瘸<br>
+拫據/根據<br>
+脂昉/脂肪<br>
+腠造/偽造<br>
+調查偽偽造/調查偽造<br>
+　﹁當然啦，你是我們的上一個顧客/﹁當然啦，你是我們的上一個顧客<br>
+擋案/檔案<br>
+站在克林納倉庫一則拍照/站在克林納倉庫前拍照<br>
+潦地簽了/潦草地簽了<br>
+我知道仄Ｋ．Ｋ．的電話號碼/我知道Ｋ．Ｋ．的電話號碼<br>
+柚屜/抽屜<br>
+紐約州一商用車車牌/紐約州商用車車牌<br>
+喬，瑞契爾/喬．瑞契爾<br>
+鑽進利的車裡/鑽進芬利的車裡<br>
+潙鈔/偽鈔<br>
+樞進他的肌膚/摳進他的肌膚<br>
+駑駛/駕駛<br>
+亨利，福特/亨利．福特<br>
+賺轉/賺錢<br>
+握荖一把/握著一把<br>
+尉準/對準<br>
+保羅，藍儂/保羅．藍儂（共二處）<br>
+保羅，哈里森/保羅．哈里森<br>
+夏莉，哈柏/夏莉．哈柏（共四處，搜尋到的第一個「夏莉，哈柏的太太」此為正確）<br>
+洗險台/洗臉台<br>
+水籠頭/水龍頭<br>
+睛睛/眼睛<br>
+<br>
 (mPDB 2017/11/3)<br>
 沈/沉 (全書)<br>
 怯儒/怯懦<br>
