--- a/book/17V1.html
+++ b/book/17V1.html
@@ -12,15 +12,15 @@ $title = '地獄藍調';
 $book = 'E17V1';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/11/3 (574K)');
+ShowUpdbDownload('2023/3/4 (574K) 2017/11/3');
 ShowPrcDownload('2017/11/3 (574K)');
 ShowMobiDownload('2017/11/3 (1600K)');
-ShowEpubDownload('2017/11/3 (390K)');
-ShowVEpubDownload('2017/11/3 (390K)');
+ShowEpubDownload('2023/3/4 (390K) 2017/11/3');
+ShowVEpubDownload('2023/3/4 (390K) 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17V1.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝ansa按掃描檔整理製作。譯者章欣。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝ansa按掃描檔整理製作。譯者章欣。感謝Gilbert勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之一</b><br>
 <br>
@@ -37,7 +37,20 @@ BookSectionEnd();
 李查德成功賦予了傑克．李奇集帥氣外型、智慧神探、正義使者與動作英雄於一身的迷人特質，讓女人愛他，男人服他，敵人敬他！貫穿全書的快節奏和精采的動作場面，就像一顆隨時都會引爆的炸彈，吸引讀者必須全神貫注地屏息閱讀！<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(Gilbert 2023/3/4)<br>
+他看了我好，會兒。/他看了我好一會兒。<br>
+那種宏亮的長音不，樣/那種宏亮的長音不一樣<br>
+就像眼/就像眼前這間。<br>
+強焊/強悍（共二處）<br>
+一晚點燃一根蠟燭/一晚點燃一根蠟燭<br>
+另外，個傢伙的雙手/另外一個傢伙的雙手<br>
+上瞠/上膛<br>
+從，捲鈔票/從一捲鈔票<br>
+沙漠之魔/沙漠之鷹（共三處）<br>
+較接於黃棕色/較接近於黃棕色<br>
+金邊眼睛/金邊眼鏡<br>
+<br>
 (mPDB 2017/11/3)<br>
 遺是/還是<br>
 不理不踩/不理不睬<br>
