Upload of revised books 15O7, 1640, and 1010490043

--- a/Share/1010490043.html
+++ b/Share/1010490043.html
@@ -12,13 +12,13 @@ $title = '神秘打字員';
 $book = 'P1010490043';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/1/19 2023/1/10 2022/12/16');
-ShowEpubDownload('2023/1/19 2023/1/10 2022/12/16');
-ShowVEpubDownload('2023/1/19 2023/1/10 2022/12/16');
+ShowUpdbDownload('2023/3/4 2023/1/19 2023/1/10 2022/12/16');
+ShowEpubDownload('2023/3/4 2023/1/19 2023/1/10 2022/12/16');
+ShowVEpubDownload('2023/3/4 2023/1/19 2023/1/10 2022/12/16');
 BookSectionEnd();
 ?>
 <img src="covers/1010490043.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝Angela Huang整理製作及提供掃瞄檔。sue1289/McDull勘誤28處。<br>
+好讀書櫃【典藏版】，感謝Angela Huang整理製作及提供掃瞄檔。感謝sue1289/McDull勘誤。感謝Gilbert勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -55,7 +55,15 @@ Fox即將改編成電影，由英國知名女星綺拉．奈特莉（Keira Knigh
 臺灣師範大學翻譯研究所博士。英國布里斯托大學英語教學碩士。喜歡翻譯小說，以譯筆輕剖書中人物生命故事中的肌理和溫度。已出版作品包括譯作《五個傷痕》、《微寫作》；翻譯教學著作《英中筆譯1》、《英中筆譯2》及英語教學著作《遜咖日記單字本》系列。<br>
 <br>
 <font size=2>
-<strong><a href="?M=hd&P=pr">勘誤表：</a></strong><br>
+<strong>勘誤表：</strong><br>
+(Gilbert 2023/3/4)<br>
+以褲頭︵為集散地/以褲頭為集散地<br>
+還真是嗓音/還真是噪音<br>
+挎行李/拎行李<br>
+雪琉抽起來/雪茄抽起來<br>
+A small house agent﹃s clerk/A small house agent’s clerk<br>
+抑揚頓錯/抑揚頓挫<br>
+等不急/等不及<br>
 <br>
 (sue1289 2023/1/19)<br>
 彈後子華爾滋/彈筷子華爾滋<br>
