--- a/book/15O7.html
+++ b/book/15O7.html
@@ -12,18 +12,23 @@ $title = '小說十八史略貳';
 $book = 'C15O7';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2015/8/7 (242K) 2015/9/4');
-ShowPrcDownload('2015/8/7 (242K) 2015/9/4');
-ShowMobiDownload('2015/8/7 (708K) 2015/9/4');
-ShowEpubDownload('2015/8/7 (178K) 2015/9/4');
-ShowVEpubDownload('2015/8/7 (178K) 2015/9/4');
+ShowUpdbDownload('2023/3/4 (242K) 2015/9/4 2015/8/7');
+ShowPrcDownload('2015/9/4 (242K) 2015/8/7');
+ShowMobiDownload('2015/9/4 (708K) 2015/8/7');
+ShowEpubDownload('2023/3/4 (178K) 2015/9/4 2015/8/7');
+ShowVEpubDownload('2023/3/4 (178K) 2015/9/4 2015/8/7');
 BookSectionEnd();
 ?>
 <img src="covers/15O7.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝guinness參照原書整理校正過。譯者廖為智。感謝sue1289勘誤。感謝chin223提供掃描檔。<br>
+好讀書櫃《典藏版》，感謝guinness參照原書整理校正過。譯者廖為智。感謝chin223提供掃描檔。感謝sue1289勘誤。感謝Gilbert勘誤。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(Gilbert 2023/3/4)<br>
+跩氣什麼/跩什麼跩<br>
+　就在這時候/就在這時候<br>
+﹁哎喲！﹂當場倒下/﹁噯喲！﹂當場倒下<br>
+<br>
 (sue1289 2015/9/4)<br>
 快采背劍姿勢/快採背劍姿勢<br>
 玩命要美田/死要美田<br>
