--- a/book/1640.html
+++ b/book/1640.html
@@ -12,18 +12,27 @@ $title = '小說十八史略肆';
 $book = 'C1640';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2016/3/4 (235K)');
+ShowUpdbDownload('2023/3/4 (235K) 2016/3/4');
 ShowPrcDownload('2016/3/4 (238K)');
 ShowMobiDownload('2016/3/4 (693K)');
-ShowEpubDownload('2016/3/4 (175K)');
-ShowVEpubDownload('2016/3/4 (175K)');
+ShowEpubDownload('2023/3/4 (175K) 2016/3/4');
+ShowVEpubDownload('2023/3/4 (175K) 2016/3/4');
 BookSectionEnd();
 ?>
 <img src="covers/1640.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝guinness參照原書整理校正過。譯者廖為智。感謝chin223提供掃描檔。<br>
+好讀書櫃《典藏版》，感謝guinness參照原書整理校正過。譯者廖為智。感謝chin223提供掃描檔。感謝Gilbert勘誤。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(Gilbert 2023/3/4)<br>
+她卻到現在還，沒有這個機會/她卻到現在還沒有這個機會<br>
+我年僅十四歲的　子也要從軍/我年僅十四歲的么子也要從軍<br>
+但　子去世/但么子去世<br>
+溺愛的是　子梁王/溺愛的是么子梁王<br>
+約摸數尺長/約莫數尺長<br>
+以切斷敵人水源之手法，而奏效/以切斷敵人水源之手法奏效<br>
+身為皇帝而無嗣子，這個問題很大啊/皇帝而無嗣子，這個問題可大啊<br>
+<br>
 (mPDB 2016/3/4)<br>
 其弟劉辟強彊/其弟劉辟彊<br>
 舌燦蓮花/舌粲蓮花<br>
