--- a/Share/1010490015.html
+++ b/Share/1010490015.html
@@ -12,13 +12,13 @@ $title = '醉枕江山卷十：探驪取珠';
 $book = 'P1010490015';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2022/11/28');
-ShowEpubDownload('2022/11/28');
-ShowVEpubDownload('2022/11/28');
+ShowUpdbDownload('2023/3/7 2022/11/28');
+ShowEpubDownload('2023/3/7 2022/11/28');
+ShowVEpubDownload('2023/3/7 2022/11/28');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝顏國強整理製作。<br>
+好讀書櫃《經典版》，感謝顏國強整理製作。感謝JC/IT勘誤。<br>
 <br>
 <b>本書簡介：</b><br>
 女帝武曌日月凌空，上官婉兒稱量天下，<br>
@@ -72,6 +72,44 @@ BookSectionEnd();
 2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(JC/IT 2023/3/7)<br>
+不能故伎重施，利/不能故計重施，利<br>
+悄加快了度，當/悄加快了速度，當<br>
+遠在三十裡之外/遠在三十里之外<br>
+落的萬俟清源姑娘/落的萬俊俟清源姑娘<br>
+產，萬俟清源得到/產，萬俊俟清源得到<br>
+板娘萬俟清源就住/板娘萬俊俟清源就住<br>
+時，萬俟清源正在/時，萬俊俟清源正在<br>
+下。萬俟清源雖以/下。萬俊俟清源雖以<br>
+話，萬俟清源吃吃/話，萬俊俟清源吃吃<br>
+聲，萬俟清源忙道/聲，萬俊俟清源忙道<br>
+吱扭吱扭﹂地緩/吱扭吱扭。地緩<br>
+面，萬俟清源的閨/面，萬俊俟清源的閨<br>
+，給萬俟清源帶了/，給萬俊俟清源帶了<br>
+倒在萬俟清源身上/倒在萬俊俟清源身上<br>
+去，萬俟清源突見/去，萬俊俟清源突見<br>
+眼。萬俟清源試探/眼。萬俊俟清源試探<br>
+柄。萬俟清源看到/柄。萬俊俟清源看到<br>
+到了三十裡外，/到了三十里外，<br>
+﹁沐絲﹁又在/﹁沐絲﹂又在<br>
+真是笑死我了/真是笑死我了。﹂<br>
+扭，吱扭﹂/扭，吱扭。<br>
+知何等人/知何等人。<br>
+更是锃明瓦亮，彷/更是鋥明瓦亮，彷<br>
+還有三十裡地：/還有三十里地：<br>
+還有三十裡。﹂/還有三十里。﹂<br>
+死，有什麼了不起的：：/死，有什麼了不起的：：﹂<br>
+安裝調拭。/安裝調試。<br>
+是以有此打算。﹂/是以有此打算。<br>
+︙，﹁運氣！﹂/︙，運氣！﹂<br>
+咱們走吧：：楊帆/咱們走吧：：﹂楊帆<br>
+和他白頭攜老：：/和他白頭偕老：：<br>
+一這些，天/一想這些，天<br>
+那就行了麼？/那就行了麼？﹂<br>
+地在萬俊清源豐挺/地在萬俟清源豐挺<br>
+萬俊清源和大/萬俟清源和大<br>
+萬俊清源是他/萬俟清源是他<br>
+應，萬俊清源馬上/應，萬俟清源馬上<br>
 </font>
 </td></tr></table>
