--- a/Share/1010490016.html
+++ b/Share/1010490016.html
@@ -12,13 +12,13 @@ $title = '醉枕江山卷十一：情深似海';
 $book = 'P1010490016';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2022/11/28');
-ShowEpubDownload('2022/11/28');
-ShowVEpubDownload('2022/11/28');
+ShowUpdbDownload('2023/3/7 2022/11/28');
+ShowEpubDownload('2023/3/7 2022/11/28');
+ShowVEpubDownload('2023/3/7 2022/11/28');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝顏國強整理製作。<br>
+好讀書櫃《經典版》，感謝顏國強整理製作。感謝JC/IT勘誤。<br>
 <br>
 <b>本書簡介：</b><br>
 女帝武曌日月凌空，上官婉兒稱量天下，<br>
@@ -61,6 +61,22 @@ BookSectionEnd();
 2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(JC/IT 2023/3/7)<br>
+：：回去碎吧，我/：：回去睡吧，我<br>
+楊帆困得眼皮打架/楊帆睏得眼皮打架<br>
+：：碎啦：：/：：睡啦：：<br>
+貪封薊北書。，似/貪封薊北書』。，似<br>
+葉下洞庭初，：：/葉下洞庭初』，：：<br>
+波兮木葉下。，意境/波兮木葉下』，意境<br>
+兒，好不後怕。/兒，好不害怕。<br>
+曲、薊北書，這樣/曲、薊北書』，這樣<br>
+慢慢濕潤了：：﹂一日/慢慢濕潤了：：一日<br>
+油嘴滑舌的！/油嘴滑舌的！﹂<br>
+懂得分辯，他/懂得分辨，他<br>
+我羽林衛，為/﹁我羽林衛，為<br>
+上會高興麼？。/上會高興麼？﹂<br>
+天愛奴的身子/（分段）天愛奴的身子<br>
+武成殿上/（分段）武成殿上<br>
 </font>
 </td></tr></table>
