Revised books 1010490017, 1010490018, and 1010490019

--- a/Share/1010490017.html
+++ b/Share/1010490017.html
@@ -12,13 +12,13 @@ $title = '醉枕江山卷十二：啼笑姻緣';
 $book = 'P1010490017';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2022/11/30');
-ShowEpubDownload('2022/11/30');
-ShowVEpubDownload('2022/11/30');
+ShowUpdbDownload('2023/3/7 2022/11/30');
+ShowEpubDownload('2023/3/7 2022/11/30');
+ShowVEpubDownload('2023/3/7 2022/11/30');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝顏國強整理製作。<br>
+好讀書櫃《經典版》，感謝顏國強整理製作。感謝JC/IT勘誤。<br>
 <br>
 <b>本書簡介：</b><br>
 女帝武曌日月凌空，上官婉兒稱量天下，<br>
@@ -71,6 +71,15 @@ BookSectionEnd();
 2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(JC/IT 2023/3/7)<br>
+上，米泣沿著/上，米粒沿著<br>
+洞房內/(分段)洞房內<br>
+早朝散後/(分段)早朝散後<br>
+這可如何是好？﹂/這可如何是好？<br>
+此時，楊帆/(分段)此時，楊帆<br>
+少華山下/(分段)少華山下<br>
+御史臺的臺獄/(分段)御史臺的臺獄<br>
+天愛奴逃一般/(分段)天愛奴逃一般<br>
 </font>
 </td></tr></table>
