--- a/Share/1010490018.html
+++ b/Share/1010490018.html
@@ -12,13 +12,13 @@ $title = '醉枕江山卷十三：監獄風雲';
 $book = 'P1010490018';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2022/11/30');
-ShowEpubDownload('2022/11/30');
-ShowVEpubDownload('2022/11/30');
+ShowUpdbDownload('2023/3/7 2022/11/30');
+ShowEpubDownload('2023/3/7 2022/11/30');
+ShowVEpubDownload('2023/3/7 2022/11/30');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝顏國強整理製作。<br>
+好讀書櫃《經典版》，感謝顏國強整理製作。感謝JC/IT勘誤。<br>
 <br>
 <b>本書簡介：</b><br>
 女帝武曌日月凌空，上官婉兒稱量天下，<br>
@@ -76,6 +76,27 @@ BookSectionEnd();
 2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(JC/IT 2023/3/7)<br>
+經在提妨著了/經在提防著了<br>
+一個選則，她/一個選擇，她<br>
+：﹁多謝陛下：：/：﹁多謝陛下：：﹂<br>
+的，這怎麼成？﹁/的，這怎麼成？﹂<br>
+﹁博古齋﹂裡/(分段)﹁博古齋﹂裡<br>
+福中不知福麼？/福中不知福麼？﹂<br>
+推事院大牢裡/(分段)推事院大牢裡<br>
+淨心庵住持禪房/(分段)淨心庵住持禪房<br>
+眼瞎耳聾了：：/眼瞎耳聾了：：﹂<br>
+﹂咔嚓！﹂/﹁咔嚓！﹂<br>
+楊帆被押進推/(分段)楊帆被押進推<br>
+﹁他想殺我！(分段)﹁他想殺我！<br>
+連著一夜/(分段)連著一夜<br>
+這份罪孽！/這份罪孽！﹂<br>
+施主冒雨趕：：/施主冒雨趕：：﹂<br>
+小蠻在外面/(分段)小蠻在外面<br>
+又道：麼，你那十/又道：﹁那麼，你那十<br>
+嘿地一聲，那人對我/嘿地一聲：﹁那人對我<br>
+我也一腳踢開：：﹂/我也一腳踢開：：<br>
+兒的心正象被一/兒的心正像被一<br>
 </font>
 </td></tr></table>
