--- a/Share/1010490019.html
+++ b/Share/1010490019.html
@@ -12,13 +12,13 @@ $title = '醉枕江山卷十四：頭角初嶄';
 $book = 'P1010490019';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2022/11/30');
-ShowEpubDownload('2022/11/30');
-ShowVEpubDownload('2022/11/30');
+ShowUpdbDownload('2023/3/7 2022/11/30');
+ShowEpubDownload('2023/3/7 2022/11/30');
+ShowVEpubDownload('2023/3/7 2022/11/30');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝顏國強整理製作。<br>
+好讀書櫃《經典版》，感謝顏國強整理製作。感謝JC/IT勘誤。<br>
 <br>
 <b>本書簡介：</b><br>
 女帝武曌日月凌空，上官婉兒稱量天下，<br>
@@ -70,6 +70,30 @@ BookSectionEnd();
 2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(JC/IT 2023/3/7)<br>
+蠻應該做的呀。/蠻應該做的呀。﹂<br>
+走得裊嬝娜娜/走得嬝嬝娜娜<br>
+郎且拭目以待！/郎且拭目以待！﹂<br>
+手，裊嬝娜娜/手，嬝嬝娜娜<br>
+婢的手法高明呢。/婢的手法高明呢。﹂<br>
+香殿曬曬太陽吧。/香殿曬曬太陽吧。﹂<br>
+了，是因為：：﹂陛下/了，是因為：：陛下<br>
+了。咳咳：：﹂陛下/了。咳咳：：陛下<br>
+的，他：﹁/的，他：：﹂<br>
+紛紛跟了出來﹂他們急/紛紛跟了出來,他們急<br>
+居然沒有動怒/居然沒有動怒。<br>
+估計李澤都會/估計李譯都會<br>
+心海一種j激盪。/心海一陣激盪。<br>
+子，巴經強自/子，已經強自<br>
+制，戒則天看過/制，武則天看過<br>
+，著武彼宜帶兵/，著武脩宜帶兵<br>
+家，武彼宜奉旨/家，武脩宜奉旨<br>
+意，武彼宜便帶/意，武脩宜便帶<br>
+人給武做宜傳旨/人給武脩宜傳旨<br>
+她在恩考一個/她在思考一個<br>
+一句﹁反是實！﹂/一句﹁反是實﹂！﹂<br>
+帝的步替步輦很/帝的步輦很<br>
+擺，裊嬝娜娜/擺，嬝嬝娜娜<br>
 </font>
 </td></tr></table>
