Revised books 1651, 1713, and 17P7

--- a/book/1651.html
+++ b/book/1651.html
@@ -12,18 +12,22 @@ $title = '小說十八史略伍';
 $book = 'C1651';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2016/4/1 (259K)');
+ShowUpdbDownload('2023/3/9 (259K) 2016/4/1');
 ShowPrcDownload('2016/4/1 (264K)');
 ShowMobiDownload('2016/4/1 (769K)');
-ShowEpubDownload('2016/4/1 (194K)');
-ShowVEpubDownload('2016/4/1 (194K)');
+ShowEpubDownload('2023/3/9 (194K) 2016/4/1');
+ShowVEpubDownload('2023/3/9 (194K) 2016/4/1');
 BookSectionEnd();
 ?>
 <img src="covers/1651.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝guinness參照原書整理校正過。譯者廖為智。感謝chin223提供掃描檔。<br>
+好讀書櫃【典藏版】，感謝guinness參照原書整理校正過。譯者廖為智。感謝chin223提供掃描檔。感謝Gilbert勘誤<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+</strong>勘誤表</strong>：<br>
+(Gilbert 2023/3/9)<br>
+這項措量/這項措置<br>
+跟隨一起的　子曹德秋/跟隨一起的么子曹德秋<br>
+<br>
 (mPDB 2016/4/1)<br>
 傍徨於飢/徬徨於飢<br>
 地力實力/地方實力<br>
