--- a/book/1713.html
+++ b/book/1713.html
@@ -12,18 +12,22 @@ $title = '小說十八史略陸';
 $book = 'C1713';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/1/6 (250K)');
+ShowUpdbDownload('2023/3/9 (250K) 2017/1/6');
 ShowPrcDownload('2017/1/6 (257K)');
 ShowMobiDownload('2017/1/6 (748K)');
-ShowEpubDownload('2017/1/6 (188K)');
-ShowVEpubDownload('2017/1/6 (188K)');
+ShowEpubDownload('2023/3/9 (188K) 2017/1/6');
+ShowVEpubDownload('2023/3/9 (188K) 2017/1/6');
 BookSectionEnd();
 ?>
 <img src="covers/1713.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝guinness參照原書整理校正過。譯者廖為智。感謝chin223提供掃描檔。<br>
+好讀書櫃【典藏版】，感謝guinness參照原書整理校正過。譯者廖為智。感謝chin223提供掃描檔。感謝Gilbert勘誤<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+</strong>勘誤表</strong>：<br>
+(Gilbert 2023/3/9)<br>
+克滿自信/充滿自信<br>
+清淡確實有文字遊戲的傾向/清談確實有文字遊戲的傾向<br>
+<br>
 (mPDB 2017/1/6)<br>
 軍團。。/軍團。<br>
 安，並旦保護/安，並且保護<br>
