Initial upload of audiobook AB001 part 22

--- a/book/audioAB001.html
+++ b/book/audioAB001.html
@@ -28,6 +28,7 @@ PlayMP3('AB001-18', '第十八篇《王安石餐桌軼聞》書亞錄音 2023/2/
 PlayMP3('AB001-19', '第十九之一篇《蘇東坡美餐江湖1：老饕本色》書亞錄音 2023/2/16');
 PlayMP3('AB001-20', '第十九之二篇《蘇東坡美餐江湖2：崇尚自然》書亞錄音 2023/2/23');
 PlayMP3('AB001-21', '第十九之三篇《蘇東坡美餐江湖3：低斟淺酌》書亞錄音 2023/3/2');
+PlayMP3('AB001-22', '第十九之四篇《蘇東坡美餐江湖4：高雅情趣》書亞錄音 2023/3/9');
 
 ?>
 
