--- a/book/audioAB002.html
+++ b/book/audioAB002.html
@@ -21,6 +21,10 @@ PlayMP3('AB002-11', '第二篇《一把青（五）》劉小珍錄音 2023/2/21'
 PlayMP3('AB002-12', '第三篇《歲除（一）》劉小珍錄音 2023/3/2');
 PlayMP3('AB002-13', '第三篇《歲除（二）》劉小珍錄音 2023/3/2');
 PlayMP3('AB002-14', '第三篇《歲除（三）》劉小珍錄音 2023/3/2');
+PlayMP3('AB002-15', '第四篇《金大班的最後一夜（一）》劉小珍錄音 2023/3/9');
+PlayMP3('AB002-16', '第四篇《金大班的最後一夜（二）》劉小珍錄音 2023/3/9');
+PlayMP3('AB002-17', '第四篇《金大班的最後一夜（三）》劉小珍錄音 2023/3/9');
+PlayMP3('AB002-18', '第四篇《金大班的最後一夜（四）》劉小珍錄音 2023/3/9');
 
 ?>
 
