Revised books 17V0, 17X5, 17U5, 1010490020, 1010490021, and 1010490022

--- a/Share/1010490020.html
+++ b/Share/1010490020.html
@@ -12,13 +12,13 @@ $title = '醉枕江山卷十五：大法官';
 $book = 'P1010490020';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2022/12/2');
-ShowEpubDownload('2022/12/2');
-ShowVEpubDownload('2022/12/2');
+ShowUpdbDownload('2023/3/11 2022/12/2');
+ShowEpubDownload('2023/3/11 2022/12/2');
+ShowVEpubDownload('2023/3/11 2022/12/2');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝顏國強整理製作。<br>
+好讀書櫃《經典版》，感謝顏國強整理製作。感謝JC/IT勘誤。<br>
 <br>
 <b>本書簡介：</b><br>
 女帝武曌日月凌空，上官婉兒稱量天下，<br>
@@ -75,6 +75,36 @@ BookSectionEnd();
 2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(JC/IT 2023/3/11)<br>
+非常稱職的。/非常稱職的。﹂<br>
+頭便忤然一跳/頭便怦然一跳<br>
+又是﹂咔！﹂/又是﹁咔！﹂<br>
+不敢背誓的。﹂/不敢背誓的。<br>
+君須慎之又慎。/君須慎之又慎。﹂<br>
+皇的心恩真的/皇的心思真的<br>
+了是咱決梁王/了是咱們梁王<br>
+當今太冇子，未/當今太子，未<br>
+帝，微徵欠了/帝，微微欠了<br>
+：﹁下宇謹遵/：﹁下官謹遵<br>
+獸。︵︵獬豸:︵/獸。︵獬豸:︵<br>
+文房四寶。/文房四寶。﹂<br>
+超的球技：：﹂而這/超的球技：：。而這<br>
+的做法齤，掄/的做法，掄<br>
+淨抬屁冇股走人/淨抬屁股走人<br>
+再叫老冇子來陪/再叫老子來陪<br>
+，只不過丹剛接觸/，只不過剛剛接觸<br>
+不來理你了：：/不來理你了：：﹂<br>
+，﹁我們每十天一/﹁我們每十天一<br>
+跟著娘子出門。/跟著娘子出門。﹂<br>
+不必太過勞累。/不必太過勞累。﹂<br>
+著就叫人生氣。/著就叫人生氣。﹂<br>
+是從李道上做文/是從孝道上做文<br>
+不禁患怒，﹁/不禁暗怒，﹁<br>
+突然冇又向袁寒/突然又向袁寒<br>
+：：。﹂﹂/：：。﹂<br>
+好啦！你好/﹁好啦！你好<br>
+題目：：﹂哼了一聲/題目：：哼了一聲<br>
+晌，暗忖道：﹂依著/晌，暗忖道：﹁依著<br>
 </font>
 </td></tr></table>
