--- a/Share/1010490021.html
+++ b/Share/1010490021.html
@@ -12,13 +12,13 @@ $title = '醉枕江山卷十六：美人恩';
 $book = 'P1010490021';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2022/12/2');
-ShowEpubDownload('2022/12/2');
-ShowVEpubDownload('2022/12/2');
+ShowUpdbDownload('2023/3/11 2022/12/2');
+ShowEpubDownload('2023/3/11 2022/12/2');
+ShowVEpubDownload('2023/3/11 2022/12/2');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝顏國強整理製作。<br>
+好讀書櫃《經典版》，感謝顏國強整理製作。感謝JC/IT勘誤。<br>
 <br>
 <b>本書簡介：</b><br>
 女帝武曌日月凌空，上官婉兒稱量天下，<br>
@@ -86,6 +86,60 @@ BookSectionEnd();
 2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(JC/IT 2023/3/11)<br>
+不了太多了。/不了太多了。﹂<br>
+：﹁那麼：：﹂你現/：﹁那麼：：你現<br>
+不到刺客的。/不到刺客的。﹂<br>
+楊隊以為/楊帆以為<br>
+已皈依我佛，請/已皈依我佛。﹂，請<br>
+烈女怕郎纏，﹂古人/烈女怕郎纏，古人<br>
+應該明白的。/應該明白的。﹂<br>
+己皈依我佛/己皈依我佛。﹂<br>
+默咄率兵/默啜率兵<br>
+名將默咄為敵/名將默啜為敵<br>
+庵裡發規了什/庵裡發現了什<br>
+說的頭暈眼書，只/說的頭暈眼花，只<br>
+好好考慮一下。/好好考慮一下。﹂<br>
+吃的齋菜了。/吃的齋菜了。﹂<br>
+楊隊和天/楊帆和天<br>
+為了表規那些/為了表現那些<br>
+州的默咄也不/州的默啜也不<br>
+，﹁默咄一聽/，﹁默啜一聽<br>
+未曾實硯的事/未曾實現的事<br>
+心有所感罷了。/心有所感罷了。﹂<br>
+下的園子了。/下的園子了。﹂<br>
+美的身子，。/美的身子。<br>
+怎樣一番感覺/怎樣一番感覺。<br>
+又是一連三劍！﹂/又是一連三劍！<br>
+人，滿胎淡黃/人，滿臉淡黃<br>
+這樣苛形怪狀的三/這樣奇形怪狀的三<br>
+說來話長：：﹁/說來話長：：﹂<br>
+正寢之日的。/正寢之日的。﹂<br>
+地，橄到北城/地，搬到北城<br>
+不是不可以很多東西/不是不可以，很多東西<br>
+不敢表規出來/不敢表現出來<br>
+甲子以上。﹁/甲子以上。﹂<br>
+露的夠多了。/露的夠多了。﹂<br>
+為是發規了自/為是發現了自<br>
+被人發規，就/被人發現，就<br>
+啊，我覺得﹂咱們不/啊，我覺得咱們不<br>
+立地成佛吧。/立地成佛吧。﹂<br>
+，大叫道：打烊啦！/，大叫道：﹁打烊啦！<br>
+搶，只奸罵罵/搶，只好罵罵<br>
+也不答應呀。/也不答應呀。﹂<br>
+有些悵然﹂胃然/有些悵然,胃然<br>
+他幫什麼忙。/他幫什麼忙。﹂<br>
+一個小史被人/一個小吏被人<br>
+車子網挪到路/車子剛挪到路<br>
+有個交待。/有個交待。﹂<br>
+他的小瓣子。/他的小辮子。<br>
+楊隊騎在/楊帆騎在<br>
+這才發規萬國/這才發現萬國<br>
+響著：﹂月初，朝/響著：﹁月初，朝<br>
+坦，吊然明知/坦，雖然明知<br>
+瓊州癢疫蟲蛇/瓊州瘴疫蟲蛇<br>
+有些樂趣了。/有些樂趣了。﹂<br>
+嗔怒嫉妒：：﹂/嗔怒嫉妒：：﹂。﹂<br>
 </font>
 </td></tr></table>
