--- a/Share/1010490022.html
+++ b/Share/1010490022.html
@@ -12,13 +12,13 @@ $title = '醉枕江山卷十七：流人劫';
 $book = 'P1010490022';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2022/12/2');
-ShowEpubDownload('2022/12/2');
-ShowVEpubDownload('2022/12/2');
+ShowUpdbDownload('2023/3/11 2022/12/2');
+ShowEpubDownload('2023/3/11 2022/12/2');
+ShowVEpubDownload('2023/3/11 2022/12/2');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝顏國強整理製作。<br>
+好讀書櫃《經典版》，感謝顏國強整理製作。感謝JC/IT勘誤。<br>
 <br>
 <b>本書簡介：</b><br>
 女帝武曌日月凌空，上官婉兒稱量天下，<br>
@@ -72,6 +72,20 @@ BookSectionEnd();
 2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(JC/IT 2023/3/11)<br>
+俊、攸而變成/俊、倏而變成<br>
+龍，攸而又變/龍，倏而又變<br>
+來，栗聲道：/來，慄聲道：<br>
+楊帆皺了皺收，沒/楊帆皺了皺眉，沒<br>
+楊帆紆了口氣道：/楊帆吁了口氣道：<br>
+殺個一幹二淨！所/殺個一乾二淨！所<br>
+遲，保護欲泛濫/遲，保護慾泛濫<br>
+薰期住到孫家，與/薰期住到陳家，與<br>
+出城七八裡，漸/出城七八里，漸<br>
+生生軟斷脖頸/生生斬斷脖頸<br>
+到，征得文醫/到，徵得文醫<br>
+有些後怕，如/有些害怕，如<br>
+有些後怕了，/有些害怕了，<br>
 </font>
 </td></tr></table>
