--- a/book/17U5.html
+++ b/book/17U5.html
@@ -12,15 +12,15 @@ $title = '雙面敵人';
 $book = 'E17U5';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/11/3 (535K)');
+ShowUpdbDownload('2023/3/11 (535K) 2017/11/3');
 ShowPrcDownload('2017/11/3 (523K)');
 ShowMobiDownload('2017/11/3 (1444K)');
-ShowEpubDownload('2017/11/3 (343K)');
-ShowVEpubDownload('2017/11/3 (343K)');
+ShowEpubDownload('2023/3/11 (343K) 2017/11/3');
+ShowVEpubDownload('2023/3/11 (343K) 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17U5.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者陳榮彬。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者陳榮彬。感謝Gilbert勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之八</b><br>
 <br>
@@ -35,7 +35,51 @@ BookSectionEnd();
 李查德在《雙面敵人》中，運用洗鍊的文字，將數起謀殺案巧妙地串聯起來，角色之間的推理攻防和心理描寫更是張力十足，堪稱李查德的顛峰之作！難怪推出之後不但獲獎連連，各大媒體也是一片好評！英國《獨立報》更大力稱讚：「李查德的麻煩之處在於，一旦你開始翻閱，就很難放下這該死的書！」<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(Gilbert 2023/3/11)<br>
+琢木鳥/啄木鳥<br>
+山姆大叔_/山姆大叔<br>
+查 一查/查一查<br>
+畫了三攔/畫了三欄<br>
+最後一攔/最後一欄<br>
+清裡/清理<br>
+還有一排排斜斜的停車位。時候休息區看起來/還有一排排斜斜的停車位。那時候休息區看起來<br>
+我點頭說﹁從她那裡我們可以知道/我點頭說：﹁從她那裡我們可以知道<br>
+你們聊了些什，/你們聊了些什麼，<br>
+採一紋/採指紋<br>
+已輕/已經<br>
+從高度與力氣看來_/從高度與力氣看來<br>
+用搶抵住/用槍抵住<br>
+_他一定認識/他一定認識<br>
+中間的a rb o n幾個字母/中間的arbon幾個字母<br>
+也是一種做成紫色吸墨紙型式的迷幻藥LSD 代稱/也是一種做成紫色吸墨紙型式的迷幻藥︵LSD︶代稱<br>
+她，說：﹁嗯。那就好。﹂/她說：﹁嗯。那就好。﹂<br>
+RT B/RTB<br>
+他在前一晚2211離營/他在前一晚二二一一離營<br>
+繼續在下走/繼續往下走<br>
+真是讓人難以置信﹂/真是讓人難以置信。﹂<br>
+因為我的選擇很自由。定都是我自己一個人做/因為我的選擇很自由。決定都是我自己一個人做<br>
+召認/招認<br>
+兀乘以這個半徑/π乘以這個半徑<br>
+哥倫比亞市警方一 樣/哥倫比亞市警方一樣<br>
+煞車_把機身拉住/煞車把機身拉住<br>
+︵Zulu time ︶/︵Zulu time︶<br>
+嘩啦噹吠/嘩啦噹啷<br>
+︵Samaritaine ︶/︵Samaritaine︶<br>
+Pont Neuf?/Pont Neuf？<br>
+cui bono?/cui bono？<br>
+跟我們ponne nuit ，/跟我們說 ponne nuit，<br>
+一 大群/一大群<br>
+﹁Un corbillard．﹂/﹁Un corbillard. ﹂<br>
+W 4級/W4級<br>
+W 3級/W3級（共二處）<br>
+_我說/我說<br>
+保母的薪水﹂/保母的薪水。﹂<br>
+乂有些輕鬆/又有些輕鬆<br>
+參嘴長/參謀長<br>
+桑瑪把車在克拉瑪的房間外/桑瑪把車停在克拉瑪的房間外<br>
+通長是/通常是<br>
+<br>
 (mPDB 2017/11/3)<br>
 銳：/說： (幾處)<br>
 曰/日 (幾處)<br>
