--- a/book/17X5.html
+++ b/book/17X5.html
@@ -12,15 +12,15 @@ $title = '闇夜回聲';
 $book = 'E17X5';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/12/1 (539K)');
+ShowUpdbDownload('2023/3/11 (539K) 2017/12/1');
 ShowPrcDownload('2017/12/1 (529K)');
 ShowMobiDownload('2017/12/1 (1446K)');
-ShowEpubDownload('2017/12/1 (336K)');
-ShowVEpubDownload('2017/12/1 (336K)');
+ShowEpubDownload('2023/3/11 (336K) 2017/12/1');
+ShowVEpubDownload('2023/3/11 (336K) 2017/12/1');
 BookSectionEnd();
 ?>
 <img src="covers/17X5.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者陳明哲。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者陳明哲。感謝Gilbert勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之五</b><br>
 <br>
@@ -35,7 +35,22 @@ BookSectionEnd();
 與驚悚大師傑佛瑞．迪佛齊名的英國驚悚小說天王李查德，自『浪人神探』傑克．李奇系列第一集開始，就勇於挑戰各種類型題材，充分展現他過人的多樣化寫作能力，從《地獄藍調》、《至死方休》快節奏的動作派推理小說，到《一觸即發》著重敘述性詭計，再到《索命訪客》回歸古典密室推理和冷硬派偵探，本集《闇夜回聲》則跨入法庭推理的領域，精采度之高，更勝法庭推理名家約翰˙葛理遜的經典作《殺戮時刻》！<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(Gilbert 2023/3/11)<br>
+按紐/按鈕（共二處）<br>
+李出數著/李奇數著<br>
+_下次應該要記得/下次應該要記得<br>
+在高溫下待/在高溫下等待<br>
+四汽虹/四汽缸<br>
+備眙/備胎<br>
+太平樣/太平洋<br>
+好奶相處/好好相處<br>
+開搶/開槍<br>
+那支該死的搶/那支該死的槍<br>
+那_老貨車/那輛老貨車<br>
+Heckler ＆Koch/Heckler ＆ Koch<br>
+洛伊．羅傑斯/洛依．羅捷斯<br>
+<br>
 (mPDB 2017/11/3)<br>
 榖倉/穀倉<br>
 桀騖不馴/桀驁不馴<br>
